[webclient2] modal dialog support for position (and size/other property changes on the fly) +partial commit . Still have to move everything window related into servoyWindowManager and fix resizing with scrollbars only on the body Case: SVY-5804

--- a/servoy_ngclient/war/css/servoy.css
+++ b/servoy_ngclient/war/css/servoy.css
@@ -40,4 +40,9 @@ label.svy-check-radio span{
 }
 .window .window-body{
 	overflow:auto;
+	height:100%;
+	/*position:absolute;*/
+}
+.window{
+	/*overflow:auto;*/
 }
